--- a/.github/workflows/releaser.yml
+++ b/.github/workflows/releaser.yml
@@ -19,6 +19,16 @@ jobs:
         uses: actions/setup-go@v2
         with:
           go-version: 1.15
+      - name: Docker Login ghcr.io
+        if: success() && startsWith(github.ref, 'refs/tags/v')
+        env:
+          DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
+          DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
+          GITHUB_TOKEN: ${{ secrets.GH_PAT }}
+        run: |
+          echo "${DOCKER_PASSWORD}" | docker login --username "${DOCKER_USERNAME}" --password-stdin
+          echo "${GITHUB_TOKEN}" | docker login ghcr.io --username $GITHUB_ACTOR --password-stdin
+
       -
         name: Run GoReleaser
         uses: goreleaser/goreleaser-action@v2
@@ -27,4 +37,3 @@ jobs:
           args: release --rm-dist
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
