--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -32,25 +32,28 @@ changelog:
       - '^test:'
       - Merge pull request
       - Merge branch
-#dockers:
-#  - image_templates:
-#      - 'ghcr.io/khorevaa/{{.ProjectName}}:{{ .Tag }}'
-#      - 'ghcr.io/khorevaa/{{.ProjectName}}:v{{ .Major }}.{{ .Minor }}'
-#      - 'ghcr.io/khorevaa/{{.ProjectName}}:latest'
-#    dockerfile: Dockerfile
-#    binaries:
-#      - unihexp
-#    build_flag_templates:
-#      - "--label=org.label-schema.schema-version=1.0"
-#      - "--label=org.label-schema.version={{.Version}}"
-#      - "--label=org.label-schema.name={{.ProjectName}}"
-#      - "--label=com.github.actions.name={{.ProjectName}}"
-#      - "--label=com.github.actions.description=Universal HEX patch binaries as fast and easily as possible"
-#      - "--label=com.github.actions.icon=terminal"
-#      - "--label=com.github.actions.color=blue"
-#      - "--label=repository=http://github.com/khorevaa/unihexp"
-#      - "--label=homepage=http://github.com/khorevaa/unihexp"
-#      - "--label=maintainer=Aleksey Khorev <khorevaa@gmail.com>"
+dockers:
+  - image_templates:
+      - 'khorevaa/{{.ProjectName}}:{{ .Tag }}'
+      - 'khorevaa/{{.ProjectName}}:v{{ .Major }}.{{ .Minor }}'
+      - 'khorevaa/{{.ProjectName}}:latest'
+      - 'ghcr.io/khorevaa/{{.ProjectName}}:{{ .Tag }}'
+      - 'ghcr.io/khorevaa/{{.ProjectName}}:v{{ .Major }}.{{ .Minor }}'
+      - 'ghcr.io/khorevaa/{{.ProjectName}}:latest'
+    dockerfile: Dockerfile
+    binaries:
+      - unihexp
+    build_flag_templates:
+      - "--label=org.label-schema.schema-version=1.0"
+      - "--label=org.label-schema.version={{.Version}}"
+      - "--label=org.label-schema.name={{.ProjectName}}"
+      - "--label=com.github.actions.name={{.ProjectName}}"
+      - "--label=com.github.actions.description=Remote Administration for 1S.Enterprise Application Servers"
+      - "--label=com.github.actions.icon=terminal"
+      - "--label=com.github.actions.color=blue"
+      - "--label=repository=http://github.com/khorevaa/odin"
+      - "--label=homepage=http://github.com/khorevaa/odin"
+      - "--label=maintainer=Aleksey Khorev <khorevaa@gmail.com>"
 archives:
   - name_template: '{{ .ProjectName }}_{{ .Os }}_{{ .Arch }}{{ if .Arm }}v{{ .Arm }}{{ end }}'
     replacements:
